docs: update CHANGELOG

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,9 @@
-# Change Log
+# Changelog
+
+## 2.1.0 (October 18, 2020)
+
+- feature: Bump v3 documentation to v3.26.18.
+- feature: Bump v4 documentation to v4.7.0.
 
 ## 2.0.0 (April 22, 2020)
 
